feat(world-map): complete BlueMap rendering pipeline